[package]
name = "ecdsa-example"
version = "0.1.0"
edition = "2021"
default-run = "ecdsa-example"

[dependencies]
ecdsa-methods = { path = "../methods" }
risc0-zkvm = { version = "0.17.0" }
serde = "1.0"
k256 = { version = "0.13.0", features = ["serde"] }
rand_core = "0.6.4"
clap = "4.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
